--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -59,5 +59,5 @@
 	"postCreateCommand": "/bin/bash -c .devcontainer/post-create.sh",
 
 	// Use 'postStartCommand' to run commands after the container starts.
-	"postStartCommand": "/bin/bash -c .devcontainer/post-start.sh"
+	   "postStartCommand": "/bin/bash -c .devcontainer/set-branch-env.sh && /bin/bash -c .devcontainer/post-start.sh"
 }
